# cpu_counter

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  main.cpp  perf.h
demos/: catalog.cpp  catalog.h  workloads.cpp
docs/: ARCHITECTURE.md  CURRENT_STATUS.md  LIMITATIONS.md  OFFLINE_GUIDE.md
examples/: quickstart.cpp
tests/: api_compile.cpp  registry_check.cpp
